百度首页练习

--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
     按钮：<button class="btn">点我</button>
     <a href="http://www.ufactory.cc/">ufactory</a>
     <textarea name="ajsdhijadhjwahf" id="" cols="30" rows="6">请输入...</textarea>
+    <img src="https://www.baidu.com/img/xinshouyedong_4f93b2577f07c164ae8efa0412dd6808.gif" >
 </body>
 </html>
